# k3s-deploy-cli

./: .env.sample  .gitignore  README.md  pyproject.toml  schema.json  test_dotenv.py  update_docs.sh
.clinerules/: memory.md  technical-design.md
.devcontainer/: devcontainer.json
docs/: pdb.md  start-prompt.md  start-prompt.md.backup  system-prompt.md  technical-design.md
src/k3s_deploy_cli/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  k3s_manager.py  logging_utils.py  models.py  proxmox_api.py
tools/: dump_ir_elements.py
tools/extract_symbols/: extract_symbols.py
