[project]
name = "k3s-deploy-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "B. van Wetten",email = "bas@vanwetten.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "proxmoxer (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
